# ChangeLog for media-tv/xdtv
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.12 2005/12/10 13:08:06 zzam Exp $

  10 Dec 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0-r1.ebuild:
  replaced dvb depend by linuxtv-dvb-headers

  05 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> -xdtv-2.2.0.ebuild:
  Remove old version.

  31 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild,
  xdtv-2.2.0-r1.ebuild:
  Don't install INSTALL file.

  30 Oct 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild,
  xdtv-2.2.0-r1.ebuild:
  Remove divx4linux useflag.

  05 Oct 2005; Paul Varner <fuzzyray@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Stable on x86. Bug# 104642

*xdtv-2.2.0-r1 (25 Jul 2005)

  25 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +xdtv-2.2.0-r1.ebuild:
  Added new theme (carbone) and bumped the versions of aqua theme and i18n
  support. Thanks to Sir Pingus <pingus_77@yahoo.fr> for the update.

  13 Jul 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0.ebuild:
  Changed dependency on dvb according to Bug #98672

  10 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild:
  Set CPPFLAGS as the dvb check fail without it.

  10 Jul 2005; David Holm <dholm@gentoo.org> xdtv-2.2.0.ebuild:
  Added to ~ppc.

  10 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0.ebuild:
  Added dependency over linuxtv-dvb-headers when dvb is enabled. Fixed the
  missing DEPEND variable.

  10 Jul 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0.ebuild:
  Added to ~x86

*xdtv-2.2.0 (09 Jul 2005)

  09 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +xdtv-2.2.0.ebuild:
  First version of xdtv (supersedes xawdecode). Applied patches for gcc4
  support and amd64 mmx/sse support.
  Thanks to TGL <degrenier@easyconnect.fr> in bug #48129.
