@@ -1,6 +1,10 @@
 # ChangeLog for media-tv/xdtv
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.12 2005/12/10 13:08:06 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.13 2005/12/10 15:07:05 flameeyes Exp $
+
+  10 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild:
+  Made mostly modular xorg friendly; it won't be until font eclass is
+  friendly, too.
 
   10 Dec 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0-r1.ebuild:
   replaced dvb depend by linuxtv-dvb-headers
